# nyota

./: .env.example  .gitignore  Cargo.toml  README.md  notes.txt
notes/: context.txt  contribution-rules.md  notes.txt
src/: lib.rs  main.rs
src/act/: default.rs  mod.rs  plugin.rs  registry.rs  schema.rs
src/api/: adapter.rs  constants.rs  mod.rs  utilities.rs
src/cache/: convo.rs  hybrid_store.rs  mem_store.rs  mod.rs  redis_store.rs
src/cli/: mod.rs  modes.rs
src/constants/: api.rs  ui.rs
src/ctx/: cache.rs  mod.rs
src/lex/: emote.rs  mental_archetypes.txt  mod.rs  mood.rs  sentiment.rs  thought.rs
src/snd/: constants.rs  control.rs  effects.rs  mod.rs  player.rs
src/tui/: banner.rs  interactive.rs  menu.rs  mod.rs  splash.rs
