[package]
name = "nyota"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"
serde_json = { version = "1.0.137" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
anyhow = "1.0.95"
clap = "4.5.27 "
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
ratatui-splash-screen = "0.1.4"
colored = "3.0.0"
rodio = { version = "0.20.1", features = ["noise"] }
chrono = "0.4.39"
tui-textarea = "0.7.0"
once_cell = "1.20.3"
